--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,15 +22,10 @@ body{
     margin-bottom: 15px;
     color: #D32920;
     background: #FFFFFF;
-    /* width:665px;
-    height:50px; */
 }
-
-
 .dental-button .btn-dental:hover{
     opacity: 95%;
     transform: scale(1.2);
-    
 }
 .dental-button p {
 	font-size: 28px !important;
@@ -38,6 +33,8 @@ body{
     color: #2d2d2d;
 }
 /* ******************************************************** */
+
+
 /* Dental Hero Section */
 /* ****************************************************************** */
 .dental-hero-bg{
@@ -46,25 +43,25 @@ body{
     background-position: center;
     background-size: cover;
     position: relative;   
-    padding-top: 02px;
-    /* height:1200px */
+    padding-top: 2rem;
 }
+
 .dental-navbar{
 	background-color: transparent;
 }
 
 .dental-navbar .nav-box{
-	padding: 0rem 3rem;
+	padding: 0rem 4rem;
 }
-
 
 .dental-navbar .nav-logo img{
-	width: 250px;
-   
+	width: 200px;
 }
+
 .dental-navbar .nav-box .call-box {
-    padding-bottom: 02px;
+    padding-bottom: 4rem;
 }
+
 .dental-navbar .nav-box .call-box p{
 	margin: 0;
 	font-size: 25px;
@@ -74,16 +71,13 @@ body{
 	line-height: 20px;
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
 .dental-navbar .nav-box .call-box a{
 	text-decoration: none;
 	color: #D32920;
-	font-size: 35px;
+	font-size: 38px;
 	font-weight: 600;
-    margin-top:40px;
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-
 .dental-navbar .nav-box .call-box .call-icon{
 	display: flex;
     align-items: center;
@@ -91,15 +85,14 @@ body{
 }
 .dental-navbar .nav-box .call-box .call-icon i{
 	margin: 0px 13px;
-    width:30px;
-    height:30px;
     background-color: red;
-    padding: 0px 15px 7px 08px;
+    padding: 2px 8px 7px;
     border-radius: 50%;
     color: white;
-    margin-top:35px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+/* ****************************************************************** */
+
 .dental{
 	padding: 2rem 0rem 3rem;
 }
@@ -109,40 +102,29 @@ body{
 	color: black;
 }
 
-/* .para-1{
-    Font-style:semiBold;
-    font-size: 40px;
-    color:#D32920;
-    margin-top:100px;
-    padding-left:120px;
-    Font-weight:600;
-    radius:4px Offset: 0px, 4px rgba(255, 255, 255, 0.25);
-} */
 .dental-hero p{
-    color: #D32920;
+    color:#D32920;
 	font-weight: 600;
-	font-size: 25px;
-  
+	font-size: 22px;
+    text-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 }
 
- .dental-hero h1{
-    Font-style:Bold;
-    Font-size:35px;
-    padding-left:68px;
-    Font-weight:700;
-    radius:4px Offset: 0px, 4px rgba(255, 255, 255, 0.25);
-    -webkit-text-stroke: 1px #FFFFFF;
-    text-align:left;
+.dental-hero h1{
+	-webkit-text-stroke: .5px #FFFFFF;
     color:#29166F;
+	text-transform: capitalize;
+	font-weight: 700;
+	font-size: 55px;
+	line-height: 75px;
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 .dental-hero h4{
-	font-weight: 400;
+	font-weight: 500;
     font-size: 28px;
     line-height: 35px;
-    
-    margin: 15px 30px;
-    padding: 10px 0px 0px 05px ;
-    /* text-align:center; */
+    text-transform: capitalize;
+    margin: 15px 0px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 /* Dental Hero Section End */
@@ -190,20 +172,21 @@ body{
     align-items: center;
 }
 .achieve .abox .vector img{
-	width: 105%;
+	width: 60%;
     /* mix-blend-mode:grey; */
 }
 .achieve .abox .vector p{
 	font-size: 24px;
 	margin-bottom: -7px;
 	font-weight: 600;
+ 
 }
 
 .achieve .abox p{
 	font-family: 'Titillium Web', sans-serif;
 	font-weight: 600;
 	color: #FFFFFF;
-	font-size: 20px;
+	font-size: 24px;
 	margin: 0;
 }
 /* .discover */
@@ -219,55 +202,50 @@ body{
     align-content: center;
     justify-content: center;
 }
+.discover h2{
+    font-size: 38px;
+    font-weight: 600;
+    margin-bottom: 2rem;
+    line-height: 3.5rem;
+    color:#29166F;;
+    text-align: center;
+}
 
 .discover .discover-images{
 	position: relative;
 }
 .discover .discover-images .main-img img{
     
-    
-    width: 90px;
+	width: 90px;
+	margin-bottom: 3rem;
+	position: relative;
     margin-left:800px;
+    p
     
+
 }
 /* .discover .discover-images .abs-img1{
-	position: absolute;
-	z-index: 1;
-	right: -25%;
-    bottom: 5%;
-} */
-.discover .discover-images .abs-img1 img{
-    width: 800px;
+	width: 800px;
     margin-left:45px;
     margin-bottom: 1rem;
-}
-/* .logo1_1{
-    position:absolute;
-    width: 90px;
-left: 800px;
-top:-90px;
 } */
-
-
-.discover h2{
-    font-size: 50px;
-    font-weight: 600;
-    margin-bottom: 2rem;
-    line-height: 60px;
-    color: #29166F;
-    text-align: left;
-    margin-top:20px;
+.discover .discover-images .abs-img1 img{
+    position: relative;
+	width: 800px;
+    margin-left:45px;
+    margin-bottom: 1rem;
+    padding-margin:-25px;
+    top:-50px;
+   
 }
+
 
 
 .discover p{
-    font-size: 32px;
+    font-size: 22px;
     font-weight: 400;
-    
-    line-height: 40px;
-    color: #000000;
-    text-align: left;
-    margin-top:20px;
+    text-transform: capitalize;
+    color: #2d2d2d;
 }
     /* end */
 
@@ -281,7 +259,7 @@ top:-90px;
     .transform h2{
         font-family:'poppins';
         font-style: normal;
-        font-size: 35px;
+        font-size: 48px;
         font-weight: 600;
         margin-bottom: 3rem;
         line-height: 50px;
@@ -289,20 +267,20 @@ top:-90px;
         text-align: left;
     }
     .transform h1{
-        font-family:'Inter';
-        font-style: normal;
-        font-size: 15px;
+       /* position:absolute; */
+        font-size: 17px;
         font-weight: 400;
-        line-height: 35px;
+        /* line-height: 35px; */
         text-transform: capitalize;
         text-align: left;
         color: #000000;
-        /* top:300px; */
+        /* margin-top:-155px; */
         
     }
     .transform img{
         width: 300px;
         margin-bottom: 7rem;
+        margin-top:-30px;
     }
  
     /* New Teeth */
@@ -314,7 +292,7 @@ top:-90px;
     font-size: 35px;
     font-weight: 600;
     margin-bottom: 3rem;
-    line-height: 50px;
+    /* line-height: 50px; */
     color: #29166F;
 }
 .new-teeth p{
@@ -324,11 +302,21 @@ top:-90px;
     color: #555657;
     text-transform: capitalize;
 }
+/* .new-teeth .teeth_1{
+    height:450px;
+    margin-top:-450px ;
+    margin-left:280px;
+    z-index:-1;
+}
+.new-teeth img{
+z-index:1;
+padding-left:-30px;
+} */
 /* ****************************************************************** */
 /* Discover2 Section */
 /* ****************************************************************** */
 .discover2-bg{
-	
+	background-image: url(../../assets/images/hero-bg.png);
 	background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -340,6 +328,7 @@ top:-90px;
     color: #fff;
     text-align: center;
     background: #362478;
+ 
 }
 .discover2 h2{
     font-size: 35px;
@@ -357,11 +346,10 @@ top:-90px;
     margin-right: auto;
 }
 .discover2 p{
-    font-family: 'Poppins';
-    font-style:normal;
-    font-size: 30px;
+    
+    font-size: 20px;
     font-weight: 500;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     margin-bottom: 30px;
     line-height:80px;
     text-align:left;
@@ -369,14 +357,14 @@ top:-90px;
     padding-left:100px;
 }
 .discover2 p b{
-    font-family: 'Poppins';
-    font-style:normal;
+   
     line-height:80px;
-	font-size: 30px;
+	font-size: 20px;
     font-weight: 500;
     text-align:left;
     color: #FFFFFF;
 }
+
 /* ****************************************************************** */
 /* Client review */
 /* ******************************************************************* */
@@ -442,7 +430,7 @@ Surgery  {
     font-size: 30px;
     font-weight: 600;
     margin-bottom: 3rem;
-    line-height: 50px;
+    line-height: 30px;
     color: #FFFFFF;
 }
 .Surgery p{
@@ -455,11 +443,45 @@ Surgery  {
 
 /* margin-top:-345px; */
 /* margin-left:9px; */
-height:691px;
+/* height:691px; */
 }  
+
+
+
 /* end */
 /* review */
 /* ******************************************************************* */
+/* our-doctor start  */
+
+.our-doctor{
+    padding: 5rem 0rem;
+    
+}
+.our-doctor h2{
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 3rem;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+
+.our-doctor img{
+    width: 650px;
+    margin-bottom: 1rem;
+}
+.our-doctor p{
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+/* end  our-doctor*/
+
+
+
 .review{
     padding: 5rem 0rem;
     text-align: center;
