--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,9 +271,10 @@ body{
         font-size: 17px;
         font-weight: 400;
         /* line-height: 35px; */
-        text-transform: capitalize;
+        /* text-transform: capitalize; */
         text-align: left;
         color: #000000;
+        margin-left:-50px;
         /* margin-top:-155px; */
         
     }
