--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -110,11 +110,11 @@
          font-size: 18px;
          font-weight: 400;
          
-         text-transform: capitalize;
+/*          text-transform: capitalize;
          text-align: left;
          color: #000000;
          margin-top:-80px;
-         
+          */
      }
     
     .discover {
