--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -110,11 +110,11 @@
          font-size: 18px;
          font-weight: 400;
          
-/*          text-transform: capitalize;
-         text-align: left;
-         color: #000000;
+        
+         text-align: center;
+         pading-left:05px;
          margin-top:-80px;
-          */
+         
      }
     
     .discover {
