--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -184,10 +184,11 @@
         padding: 5rem 0rem 3rem;
     }
     .our-doctor p {
+        position:absolute;
         font-size: 10px;
        margin-top:-50px;
         text-align:left;
-           margin-left:-40px;
+           margin-left:-70px;
     }
     .our-doctor h2 {
         font-size: 30px;
