--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -45,7 +45,8 @@
     
     
     .dental-hero h1 {
-        font-size: 25px;
+        font-size: 22px;
+        font-style:bold;
     line-height: 38px;
     font-weight: 700;
         /* line-height: 70px; */
