--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -43,17 +43,17 @@
    
    
     
-    
-    .dental-hero h1 {
-        font-size: 35px;
-    line-height: 38px;
-    font-weight: 800;
-        /* line-height: 70px; */
-    }
-    .dental-hero h4 {
+    .dental-hero p {
         font-size: 20px;
-        /* line-height: 40px; */
-    }
+      }
+      .dental-hero h1 {
+        font-size: 40px;
+        line-height: 55px;
+      }
+      .dental-hero h4 {
+        font-size: 24px;
+        line-height: 30px;
+      }
    
    
     
@@ -283,3 +283,38 @@
     }
 }
 
+@media only screen and (min-width: 1200px){
+
+    .transform p{
+        font-size:24px;
+        
+    }
+
+    .discover h1{
+        font-size:32px;
+    }
+    .discover h2{
+        font-size:50px;
+    }
+
+    .discover2{
+        font-size: 36px;
+    }
+
+    .discover2 p{
+        font-size: 36px;
+    }
+
+    .discover2 h2{
+        font-size: 48px;
+    }
+
+    .discover_4 h1{
+        font-size:40px;
+    }
+    .discover_4 p{
+        font-size:18px;
+    }
+
+
+}
